--- a/rsc/template/index.html
+++ b/rsc/template/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="/static/css/style.css">
+    </head>
+
     <body>
         Hello, World!
     </body>
