Add video players and feature to read local files

--- a/rsc/template/index.html
+++ b/rsc/template/index.html
@@ -4,6 +4,31 @@
     </head>
 
     <body>
-        Hello, World!
+        <div id="main-contents">
+            <div id="head-contents"><h1>Obiwan</h1></div>
+            <div id="columns">
+                <div id="left-column"></div>
+                <div id="right-column">
+                    <table id="video-player-table">
+                        <tr>
+                            <td class="video-player-block"><video id="video_1_1" class="video-player" controls></video></td>
+                            <td class="video-player-block"><video id="video_1_2" class="video-player" controls></video></td>
+                            <td class="video-player-block"><video id="video_1_3" class="video-player" controls></video></td>
+                        </tr>
+                        <tr>
+                            <td class="video-player-block"><video id="video_2_1" class="video-player" controls></video></td>
+                            <td class="video-player-block"><video id="video_2_2" class="video-player" controls></video></td>
+                            <td class="video-player-block"><video id="video_2_3" class="video-player" controls></video></td>
+                        </tr>
+                        <tr>
+                            <td class="video-player-block"><video id="video_3_1" class="video-player" controls></video></td>
+                            <td class="video-player-block"><video id="video_3_2" class="video-player" controls></video></td>
+                            <td class="video-player-block"><video id="video_3_3" class="video-player" controls></video></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div id="foot-contents"><p>Obiwan 0.1.0</p></div>
+        </div>
     </body>
 </html>
