--- a/rsc/template/index.html
+++ b/rsc/template/index.html
@@ -1,13 +1,23 @@
+<!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Obiwan 0.1.0</title>
         <link rel="stylesheet" href="/static/css/style.css">
     </head>
 
     <body>
         <div id="main-contents">
             <div id="head-contents"><h1>Obiwan</h1></div>
+
             <div id="columns">
-                <div id="left-column"></div>
+                <div id="left-column">
+                    <div id="current-path"></div>
+                    <ul id="directory-entries">
+                    </ul>
+                </div>
+
                 <div id="right-column">
                     <table id="video-player-table">
                         <tr>
@@ -28,7 +38,10 @@
                     </table>
                 </div>
             </div>
+
             <div id="foot-contents"><p>Obiwan 0.1.0</p></div>
         </div>
+
+        <script src="/static/js/app.js"></script>
     </body>
 </html>
